mac getIpByName liefert name von IPnum


##################################################################
opsi-winst/opsi-script (4.12.4.18) stable; urgency=low

 * osfunc: fix for getOSArchitecture at windows 64 bit
 * osparser: doAktionen: executesection: call sections with catchout=true
   fixes: nooutput in log and showoutput
 * osfuncmac: getProfilesDirListMac implemented

-- d.oertel <d.oertel@uib.de> Wed, 14 Apr 2021 15:00

opsi-winst/opsi-script (4.12.4.17) stable; urgency=low

 * change getFileBom to fileHasBom(<filename>) : boolean

-- d.oertel <d.oertel@uib.de> Wed, 31 Mar 2021 15:00


opsi-winst/opsi-script (4.12.4.16) stable; urgency=low

 * can now handle *.opsiscript files with bom
 * call of execwith section with /encoding parameter (by j.laajili)
 * new string function: getOSarchitecture (x86_32 / x86_64/ arm_64)
 * new boolean function: runningInWAnMode (true if opsiserver = localhost) default=false

-- d.oertel <d.oertel@uib.de> Fri, 26 Feb 2021 15:00

opsi-winst/opsi-script (4.12.4.15) stable; urgency=low

 * new function asConfidentialList(<list>) : stringlist
 * new GUI Interface implementation
 * some additional try excet in osjson and load testfile variants
 * osGUIControl: unify skin directories to 'skin' with fallback to custom\winstskin at windows
 * standard out file at windows now opsi-script.exe
 * locale is now opsi-script.po (also at windows)
 * winstxx.exe only as symbolic links to opsi-script.exe (for backward compatibility)
 * osparser: executesection: shellinanIcon: logleveloffset=0

-- d.oertel <d.oertel@uib.de> Fri, 12 Feb 2021 15:00

opsi-winst/opsi-script (4.12.4.14) stable; urgency=low

 * redesign of TXStringlist file in and out encoding  (by j.laajili)
 * call of patches section with /encoding parameter (by j.laajili)
 * call of patchTextFile section with /encoding parameter  (by j.laajili)
 * new boolean function: fileorfolderExists(<file name>, [<access arch>]) (by j.laajili)